dlang_version/sgogl.d


/*************/
/** Drawing **/

extern(C){
  void gr_draw(uint, float, float, float, float, float, float, float, float);
  void gr_draw_centered(uint, float, float, float, float, float, float);
  void gr_point_size(float);
  void gr_draw_point(float, float, float);
  void gr_draw_line(float, float, float, float, float);
  void gr_draw_line_sp(float, float, float, float, float, float);
  void gr_refresh();
  void gr_clear_depth();
  void gr_clear();
  void gr_clear_color(float, float, float, float);
  void gr_clear_colored(float, float, float, float);
  void gr_wait_for_render();
}

/************/
/** Events **/

extern(C){
  void gr_register_events();
  int gr_has_event();
  
  void gr_read_mouse();
  int gr_mouse_x();
  int gr_mouse_y();
  int gr_mouse_left();
  int gr_mouse_middle();
  int gr_mouse_right();
  
  void gr_set_wait_event(int value);
  int gr_read();
  
  int gr_key_repeated();
  int gr_key_pressed();
  int gr_key();
  
  int gr_mouse_button();
  int gr_mouse_state();
  int gr_mouse_clicks();
  int gr_mouse_button_x();
  int gr_mouse_button_y();
  
  int gr_mouse_move_x();
  int gr_mouse_move_y();
  
  int gr_mouse_move_xrel();
  int gr_mouse_move_yrel();
  
  int gr_wheel();
  
  int gr_window_event();
}

/**********/
/** View **/

extern(C){
  void gr_view(float, float, float, float);
  void gr_view_centered(float, float, float, float);
  
  float gr_screen_to_world_x(int);
  float gr_screen_to_world_y(int);
}

/********************/
/** Initialization **/

extern(C) int gr_open();
extern(C) void gr_close();

